 - Added the Ctrl+Shift+V keyboard shortcut (Cmd+Shift+V on the Mac) to toggle
   AVIM on and off; this shortcut does not conflict with any built-in shortcuts,
   but does conflict with Adblock Plus.
 - Replaced the avim_prefs plain text preferences file with entries in Firefox's
   built-in preferences service. Users of previous versions will have to set
   their input method and other options again.
 - Advanced options can be set using about:config. These options are: the IDs of
   text boxes that AVIM should ignore and the actual methods that comprise Auto.
 - Ensured that any preference change is reflected in every open window, as
   well as windows opened from that point on.
 - Localized into Spanish, because Minh knows Spanish.
 - Localized into Vietnamese, in case Firefox ever gets an official translation
   into Vietnamese. One can hope...

Version 20080224.66 (Thursday, June 19, 2008)
 - Fixed the checkbox menu items, which were completely broken.
 - Added option to show and hide the status bar panel.

Version ${Version} (${Date})
 - Added a preference window that currently covers all the options available
   through about:config.
 - Fixed reliability issues in AJAX applications, including Gmail, and rich text
   editors like FCKeditor. More testing is needed, however.
 - Fixed issue where AVIM would ignore words following certain punctuation
   characters, such as curly quotes and ellipses.
 - Changed keyboard shortcut for toggling AVIM to Ctrl+Alt+V (Cmd+Opt+V on the
   Mac) to avoid a collision with Adblock Plus.
 - Added the Ctrl+: (Cmd+:) and Ctrl+; (Cmd+;) keyboard shortcuts to cycle back
   and forward through the input method list.
 - Added the Ctrl+Alt+S (Cmd+Opt+S) keyboard shortcut to toggle the "Enforce
   Spelling" option.
 - Added the Ctrl+Alt+; (Cmd+Opt+;) keyboard shortcut to toggle the "Old
   Accents" option.
 - Removed the menu item to toggle the status bar panel, since it is redundant
   with the preference window now.