@@ -1,3 +1,5 @@
+ - Figure out why the first word entered into a designMode document is flipped
+   around (i.e., "DDa'nh" turns into "a'nhDD").
  - Support editable trees. [1]
  - Add key mapping for the dong sign.
  - Optionally remember on/off state per-site, using FUEL or the Content
