@@ -1,7 +1,7 @@
 #!/bin/bash
 # Build config for build.sh
 APP_NAME=avim
-CHROME_PROVIDERS="content locale"
+CHROME_PROVIDERS="content locale skin"
 CLEAN_UP=1
 ROOT_FILES="CHANGELOG LICENSE"
 ROOT_DIRS="defaults"
