@@ -7,6 +7,7 @@
 <!ENTITY avim-enabled.key "V">
 <!ENTITY avim-enabled.label "Activada">
 <!ENTITY avim-enabled.accesskey "A">
+<!ENTITY avim-enabled.description "Activar &AVIM.label; para la entrada en vietnamita">
 <!ENTITY avim-prev-method.modifiers "accel"><!-- Ctrl on Windows; Cmd on Mac -->
 <!ENTITY avim-prev-method.key ":">
 <!ENTITY avim-next-method.modifiers "accel"><!-- Ctrl on Windows; Cmd on Mac -->
