@@ -1,0 +1,45 @@
+@namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
+
+/*** Toolbar buttons **********************************************************/
+
+#avim-tb-enabled {
+	list-style-image: url("chrome://avim/skin/tb-enabled24.png");
+}
+toolbar[iconsize="small"] #avim-tb-enabled {
+	list-style-image: url("chrome://avim/skin/tb-enabled16.png");
+}
+
+#avim-tb-auto {
+	list-style-image: url("chrome://avim/skin/tb-auto24.png");
+}
+toolbar[iconsize="small"] #avim-tb-auto {
+	list-style-image: url("chrome://avim/skin/tb-auto16.png");
+}
+
+#avim-tb-telex {
+	list-style-image: url("chrome://avim/skin/tb-telex24.png");
+}
+toolbar[iconsize="small"] #avim-tb-telex {
+	list-style-image: url("chrome://avim/skin/tb-telex16.png");
+}
+
+#avim-tb-vni {
+	list-style-image: url("chrome://avim/skin/tb-vni24.png");
+}
+toolbar[iconsize="small"] #avim-tb-vni {
+	list-style-image: url("chrome://avim/skin/tb-vni16.png");
+}
+
+#avim-tb-viqr {
+	list-style-image: url("chrome://avim/skin/tb-viqr24.png");
+}
+toolbar[iconsize="small"] #avim-tb-viqr {
+	list-style-image: url("chrome://avim/skin/tb-viqr16.png");
+}
+
+#avim-tb-viqr-star {
+	list-style-image: url("chrome://avim/skin/tb-viqr-star24.png");
+}
+toolbar[iconsize="small"] #avim-tb-viqr-star {
+	list-style-image: url("chrome://avim/skin/tb-viqr-star16.png");
+}
